# YC-Prompt_tool

./: README.md  index.html
v2-database/: README.md  index.html  package.json  schema.sql  wrangler.toml
v2-database/api/: auth.js  index.js  prompts.js
v2-database/src/: main.js
v2-database/src/components/: Editor.js  VersionHistory.js
v3-desktop/: Cargo.toml  README.md  index.html  package.json  vite.config.js
v3-desktop/src/: main.js
v3-desktop/src-tauri/: tauri.conf.json
v3-desktop/src-tauri/src/: main.rs
v3-desktop/src/components/: Editor.vue
